@@ -1,4 +1,4 @@
-package com.opinionowl.opinionowl;
+package com.opinionowl.opinionowl.ModelTests;
 import com.opinionowl.opinionowl.models.*;
 import com.opinionowl.opinionowl.repos.*;
 import org.junit.jupiter.api.Test;
@@ -29,7 +29,7 @@ public class AppUserTest {
         u1.addSurvey(survey);
 
         assertEquals(1, u1.getListSurveys().size());
-        List<Survey> expected = Arrays.asList(survey);
+        List<Survey> expected = List.of(survey);
 
         assertEquals(expected, u1.getListSurveys());
     }
